--- a/test/html/expect/test_package+re/Functor/index.html
+++ b/test/html/expect/test_package+re/Functor/index.html
@@ -11,6 +11,47 @@
   <script>
    hljs.initHighlightingOnLoad();
   </script>
+  <script>
+   document.addEventListener('DOMContentLoaded', () => {
+        const SYNTAXES = ['ocaml', 'reason']
+        const CLASS_PREFIX = 'syntax__'
+        const ocamlInputId = 'radio-ocaml'
+        const reasonInputId = 'radio-reason'
+        let $toggleSyntaxDiv = document.createElement('div')
+        let currentSyntax = localStorage.getItem('syntax') || SYNTAXES[0]
+        let checked = `checked="checked"`
+        
+        $toggleSyntaxDiv.innerHTML = `
+          <div style="float:right;">
+            <input type="radio" id="${ocamlInputId}" name="syntax" value="ocaml" ${currentSyntax == 'ocaml' ? checked : ""}>
+            <label for="${ocamlInputId}"><code>ml</code></label>
+            <input type="radio" id="${reasonInputId}" name="syntax" value="reason" ${currentSyntax == 'reason' ? checked : ""}>
+            <label for="${reasonInputId}"><code>re</code></label>
+          </div>
+        `.trim()
+        $toggleSyntaxDiv = $toggleSyntaxDiv.firstChild
+        document.querySelector('body > nav').appendChild($toggleSyntaxDiv);
+  
+        let setCurrentSyntax = (syntax) => {
+          document.body.classList.remove(`${CLASS_PREFIX}${currentSyntax}`)
+          document.body.classList.add(`${CLASS_PREFIX}${syntax}`)
+  
+          currentSyntax = syntax
+          localStorage.setItem('syntax', currentSyntax)
+        }
+  
+        setCurrentSyntax(currentSyntax)
+  
+        const $ocamlInputEl = document.getElementById(ocamlInputId);
+        $ocamlInputEl.addEventListener('click', (el) => {
+          setCurrentSyntax(el.target.value)
+        })
+        const $reasonInputEl = document.getElementById(reasonInputId)
+        $reasonInputEl.addEventListener('click', (el) => {
+          setCurrentSyntax(el.target.value)
+        })
+      })
+  </script>
  </head>
  <body>
   <nav>
@@ -22,25 +63,25 @@
    </h1>
   </header>
   <div class="content">
-   <div class="spec module-type lang-ocaml" id="module-type-S">
+   <div class="spec module-type syntax-ocaml" id="module-type-S">
     <a href="#module-type-S" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S/index.html">S</a> = { ... };</code>
    </div>
-   <div class="spec module-type lang-ocaml" id="module-type-S1">
+   <div class="spec module-type syntax-ocaml" id="module-type-S1">
     <a href="#module-type-S1" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S1/index.html">S1</a> =  (<a href="module-type-S1/argument-1-_/index.html">_</a>: <a href="module-type-S/index.html">S</a>) <span>=&gt;</span> <a href="module-type-S/index.html">S</a>;</code>
    </div>
-   <div class="spec module lang-ocaml" id="module-F1">
+   <div class="spec module syntax-ocaml" id="module-F1">
     <a href="#module-F1" class="anchor"></a><code><span class="keyword">module</span> <a href="F1/index.html">F1</a>:  (<a href="F1/argument-1-Arg/index.html">Arg</a>: <a href="module-type-S/index.html">S</a>) <span>=&gt;</span> <a href="module-type-S/index.html">S</a>;</code>
    </div>
-   <div class="spec module lang-ocaml" id="module-F2">
+   <div class="spec module syntax-ocaml" id="module-F2">
     <a href="#module-F2" class="anchor"></a><code><span class="keyword">module</span> <a href="F2/index.html">F2</a>:  (<a href="F2/argument-1-Arg/index.html">Arg</a>: <a href="module-type-S/index.html">S</a>) <span>=&gt;</span> <a href="module-type-S/index.html">S</a> <span class="keyword">with</span> <span class="keyword">type</span> <a href="module-type-S/index.html#type-t">t</a> = <a href="F2/argument-1-Arg/index.html#type-t">Arg.t</a>;</code>
    </div>
-   <div class="spec module lang-ocaml" id="module-F3">
+   <div class="spec module syntax-ocaml" id="module-F3">
     <a href="#module-F3" class="anchor"></a><code><span class="keyword">module</span> <a href="F3/index.html">F3</a>:  (<a href="F3/argument-1-Arg/index.html">Arg</a>: <a href="module-type-S/index.html">S</a>) <span>=&gt;</span> { ... };</code>
    </div>
-   <div class="spec module lang-ocaml" id="module-F4">
+   <div class="spec module syntax-ocaml" id="module-F4">
     <a href="#module-F4" class="anchor"></a><code><span class="keyword">module</span> <a href="F4/index.html">F4</a>:  (<a href="F4/argument-1-Arg/index.html">Arg</a>: <a href="module-type-S/index.html">S</a>) <span>=&gt;</span> <a href="module-type-S/index.html">S</a>;</code>
    </div>
-   <div class="spec module lang-ocaml" id="module-F5">
+   <div class="spec module syntax-ocaml" id="module-F5">
     <a href="#module-F5" class="anchor"></a><code><span class="keyword">module</span> <a href="F5/index.html">F5</a>:  () <span>=&gt;</span> <a href="module-type-S/index.html">S</a>;</code>
    </div>
   </div>
