--- a/test/html/expect/test_package+re/Module/index.html
+++ b/test/html/expect/test_package+re/Module/index.html
@@ -11,6 +11,47 @@
   <script>
    hljs.initHighlightingOnLoad();
   </script>
+  <script>
+   document.addEventListener('DOMContentLoaded', () => {
+        const SYNTAXES = ['ocaml', 'reason']
+        const CLASS_PREFIX = 'syntax__'
+        const ocamlInputId = 'radio-ocaml'
+        const reasonInputId = 'radio-reason'
+        let $toggleSyntaxDiv = document.createElement('div')
+        let currentSyntax = localStorage.getItem('syntax') || SYNTAXES[0]
+        let checked = `checked="checked"`
+        
+        $toggleSyntaxDiv.innerHTML = `
+          <div style="float:right;">
+            <input type="radio" id="${ocamlInputId}" name="syntax" value="ocaml" ${currentSyntax == 'ocaml' ? checked : ""}>
+            <label for="${ocamlInputId}"><code>ml</code></label>
+            <input type="radio" id="${reasonInputId}" name="syntax" value="reason" ${currentSyntax == 'reason' ? checked : ""}>
+            <label for="${reasonInputId}"><code>re</code></label>
+          </div>
+        `.trim()
+        $toggleSyntaxDiv = $toggleSyntaxDiv.firstChild
+        document.querySelector('body > nav').appendChild($toggleSyntaxDiv);
+  
+        let setCurrentSyntax = (syntax) => {
+          document.body.classList.remove(`${CLASS_PREFIX}${currentSyntax}`)
+          document.body.classList.add(`${CLASS_PREFIX}${syntax}`)
+  
+          currentSyntax = syntax
+          localStorage.setItem('syntax', currentSyntax)
+        }
+  
+        setCurrentSyntax(currentSyntax)
+  
+        const $ocamlInputEl = document.getElementById(ocamlInputId);
+        $ocamlInputEl.addEventListener('click', (el) => {
+          setCurrentSyntax(el.target.value)
+        })
+        const $reasonInputEl = document.getElementById(reasonInputId)
+        $reasonInputEl.addEventListener('click', (el) => {
+          setCurrentSyntax(el.target.value)
+        })
+      })
+  </script>
  </head>
  <body>
   <nav>
@@ -26,7 +67,7 @@
   </header>
   <div class="content">
    <div>
-    <div class="spec value lang-ocaml" id="val-foo">
+    <div class="spec value syntax-ocaml" id="val-foo">
      <a href="#val-foo" class="anchor"></a><code><span class="keyword">let</span> foo: unit;</code>
     </div>
     <div>
@@ -35,49 +76,46 @@
      </p>
     </div>
    </div>
-   <div class="spec module-type lang-ocaml" id="module-type-S">
+   <div class="spec module-type syntax-ocaml" id="module-type-S">
     <a href="#module-type-S" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S/index.html">S</a> = { ... };</code>
    </div>
-   <div class="spec module-type lang-ocaml" id="module-type-S1">
+   <div class="spec module-type syntax-ocaml" id="module-type-S1">
     <a href="#module-type-S1" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> S1;</code>
    </div>
-   <div class="spec module-type lang-ocaml" id="module-type-S2">
+   <div class="spec module-type syntax-ocaml" id="module-type-S2">
     <a href="#module-type-S2" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S2/index.html">S2</a> = <a href="module-type-S/index.html">S</a>;</code>
    </div>
-   <div class="spec module-type lang-ocaml" id="module-type-S3">
+   <div class="spec module-type syntax-ocaml" id="module-type-S3">
     <a href="#module-type-S3" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S3/index.html">S3</a> = <a href="module-type-S/index.html">S</a> <span class="keyword">with</span> <span class="keyword">type</span> <a href="module-type-S/index.html#type-t">t</a> = int <span class="keyword">and</span> <span class="keyword">type</span> <a href="module-type-S/index.html#type-u">u</a> = string;</code>
    </div>
-   <div class="spec module-type lang-ocaml" id="module-type-S4">
+   <div class="spec module-type syntax-ocaml" id="module-type-S4">
     <a href="#module-type-S4" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S4/index.html">S4</a> = <a href="module-type-S/index.html">S</a> <span class="keyword">with</span> <span class="keyword">type</span> <a href="module-type-S/index.html#type-t">t</a> := int;</code>
    </div>
-   <div class="spec module-type lang-ocaml" id="module-type-S5">
+   <div class="spec module-type syntax-ocaml" id="module-type-S5">
     <a href="#module-type-S5" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S5/index.html">S5</a> = <a href="module-type-S/index.html">S</a> <span class="keyword">with</span> <span class="keyword">type</span> <a href="module-type-S/index.html#type-v">v</a>('a) := list(<span class="type-var">'a</span>);</code>
    </div>
-   <div class="spec type lang-reason" id="type-result">
+   <div class="spec type syntax-ocaml" id="type-result">
     <a href="#type-result" class="anchor"></a><code><span class="keyword">type</span> result('a, 'b);</code>
    </div>
-   <div class="spec type lang-ocaml" id="type-result">
-    <a href="#type-result" class="anchor"></a><code><span class="keyword">type</span> <span>('a, 'b) result</span></code>
-   </div>
-   <div class="spec module-type lang-ocaml" id="module-type-S6">
+   <div class="spec module-type syntax-ocaml" id="module-type-S6">
     <a href="#module-type-S6" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S6/index.html">S6</a> = <a href="module-type-S/index.html">S</a> <span class="keyword">with</span> <span class="keyword">type</span> <a href="module-type-S/index.html#type-w">w</a>('a, 'b) := <a href="index.html#type-result">result</a><span>(<span class="type-var">'a</span>,&nbsp;<span class="type-var">'b</span>)</span>;</code>
    </div>
-   <div class="spec module lang-ocaml" id="module-M'">
+   <div class="spec module syntax-ocaml" id="module-M'">
     <a href="#module-M'" class="anchor"></a><code><span class="keyword">module</span> <a href="M'/index.html">M'</a>: { ... };</code>
    </div>
-   <div class="spec module-type lang-ocaml" id="module-type-S7">
+   <div class="spec module-type syntax-ocaml" id="module-type-S7">
     <a href="#module-type-S7" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S7/index.html">S7</a> = <a href="module-type-S/index.html">S</a> <span class="keyword">with</span> <span class="keyword">module</span> <a href="module-type-S/M/index.html">M</a> = <a href="M'/index.html">M'</a>;</code>
    </div>
-   <div class="spec module-type lang-ocaml" id="module-type-S8">
+   <div class="spec module-type syntax-ocaml" id="module-type-S8">
     <a href="#module-type-S8" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S8/index.html">S8</a> = <a href="module-type-S/index.html">S</a> <span class="keyword">with</span> <span class="keyword">module</span> <a href="module-type-S/M/index.html">M</a> := <a href="M'/index.html">M'</a>;</code>
    </div>
-   <div class="spec module-type lang-ocaml" id="module-type-S9">
+   <div class="spec module-type syntax-ocaml" id="module-type-S9">
     <a href="#module-type-S9" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S9/index.html">S9</a> = <span class="keyword">module</span> <span class="keyword">type</span> <span class="keyword">of</span> <a href="M'/index.html">M'</a>;</code>
    </div>
-   <div class="spec module lang-ocaml" id="module-Mutually">
+   <div class="spec module syntax-ocaml" id="module-Mutually">
     <a href="#module-Mutually" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">rec</span> <a href="Mutually/index.html">Mutually</a>: { ... };</code>
    </div>
-   <div class="spec module lang-ocaml" id="module-Recursive">
+   <div class="spec module syntax-ocaml" id="module-Recursive">
     <a href="#module-Recursive" class="anchor"></a><code><span class="keyword">and</span> <a href="Recursive/index.html">Recursive</a>: { ... };</code>
    </div>
   </div>
