--- a/test/html/expect/test_package+re/Nested/index.html
+++ b/test/html/expect/test_package+re/Nested/index.html
@@ -11,6 +11,47 @@
   <script>
    hljs.initHighlightingOnLoad();
   </script>
+  <script>
+   document.addEventListener('DOMContentLoaded', () => {
+        const SYNTAXES = ['ocaml', 'reason']
+        const CLASS_PREFIX = 'syntax__'
+        const ocamlInputId = 'radio-ocaml'
+        const reasonInputId = 'radio-reason'
+        let $toggleSyntaxDiv = document.createElement('div')
+        let currentSyntax = localStorage.getItem('syntax') || SYNTAXES[0]
+        let checked = `checked="checked"`
+        
+        $toggleSyntaxDiv.innerHTML = `
+          <div style="float:right;">
+            <input type="radio" id="${ocamlInputId}" name="syntax" value="ocaml" ${currentSyntax == 'ocaml' ? checked : ""}>
+            <label for="${ocamlInputId}"><code>ml</code></label>
+            <input type="radio" id="${reasonInputId}" name="syntax" value="reason" ${currentSyntax == 'reason' ? checked : ""}>
+            <label for="${reasonInputId}"><code>re</code></label>
+          </div>
+        `.trim()
+        $toggleSyntaxDiv = $toggleSyntaxDiv.firstChild
+        document.querySelector('body > nav').appendChild($toggleSyntaxDiv);
+  
+        let setCurrentSyntax = (syntax) => {
+          document.body.classList.remove(`${CLASS_PREFIX}${currentSyntax}`)
+          document.body.classList.add(`${CLASS_PREFIX}${syntax}`)
+  
+          currentSyntax = syntax
+          localStorage.setItem('syntax', currentSyntax)
+        }
+  
+        setCurrentSyntax(currentSyntax)
+  
+        const $ocamlInputEl = document.getElementById(ocamlInputId);
+        $ocamlInputEl.addEventListener('click', (el) => {
+          setCurrentSyntax(el.target.value)
+        })
+        const $reasonInputEl = document.getElementById(reasonInputId)
+        $reasonInputEl.addEventListener('click', (el) => {
+          setCurrentSyntax(el.target.value)
+        })
+      })
+  </script>
  </head>
  <body>
   <nav>
@@ -45,7 +86,7 @@
     <a href="#module" class="anchor"></a>Module
    </h2>
    <div>
-    <div class="spec module lang-ocaml" id="module-X">
+    <div class="spec module syntax-ocaml" id="module-X">
      <a href="#module-X" class="anchor"></a><code><span class="keyword">module</span> <a href="X/index.html">X</a>: { ... };</code>
     </div>
     <div>
@@ -58,7 +99,7 @@
     <a href="#module-type" class="anchor"></a>Module type
    </h2>
    <div>
-    <div class="spec module-type lang-ocaml" id="module-type-Y">
+    <div class="spec module-type syntax-ocaml" id="module-type-Y">
      <a href="#module-type-Y" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-Y/index.html">Y</a> = { ... };</code>
     </div>
     <div>
@@ -71,7 +112,7 @@
     <a href="#functor" class="anchor"></a>Functor
    </h2>
    <div>
-    <div class="spec module lang-ocaml" id="module-F">
+    <div class="spec module syntax-ocaml" id="module-F">
      <a href="#module-F" class="anchor"></a><code><span class="keyword">module</span> <a href="F/index.html">F</a>:  (<a href="F/argument-1-Arg1/index.html">Arg1</a>: <a href="module-type-Y/index.html">Y</a>) <span>=&gt;</span>  (<a href="F/argument-2-Arg2/index.html">Arg2</a>: { ... }) <span>=&gt;</span> { ... };</code>
     </div>
     <div>
@@ -84,7 +125,7 @@
     <a href="#class" class="anchor"></a>Class
    </h2>
    <div>
-    <div class="spec class lang-ocaml" id="class-z">
+    <div class="spec class syntax-ocaml" id="class-z">
      <a href="#class-z" class="anchor"></a><code><span class="keyword">class</span> <span class="keyword">virtual</span>  <a href="class-z/index.html">z</a>: { ... }</code>
     </div>
     <div>
@@ -93,7 +134,7 @@
      </p>
     </div>
    </div>
-   <div class="spec class lang-ocaml" id="class-inherits">
+   <div class="spec class syntax-ocaml" id="class-inherits">
     <a href="#class-inherits" class="anchor"></a><code><span class="keyword">class</span> <span class="keyword">virtual</span>  <a href="class-inherits/index.html">inherits</a>: { ... }</code>
    </div>
   </div>
