--- a/test/html/expect/test_package+re/Recent/X/index.html
+++ b/test/html/expect/test_package+re/Recent/X/index.html
@@ -11,6 +11,47 @@
   <script>
    hljs.initHighlightingOnLoad();
   </script>
+  <script>
+   document.addEventListener('DOMContentLoaded', () => {
+        const SYNTAXES = ['ocaml', 'reason']
+        const CLASS_PREFIX = 'syntax__'
+        const ocamlInputId = 'radio-ocaml'
+        const reasonInputId = 'radio-reason'
+        let $toggleSyntaxDiv = document.createElement('div')
+        let currentSyntax = localStorage.getItem('syntax') || SYNTAXES[0]
+        let checked = `checked="checked"`
+        
+        $toggleSyntaxDiv.innerHTML = `
+          <div style="float:right;">
+            <input type="radio" id="${ocamlInputId}" name="syntax" value="ocaml" ${currentSyntax == 'ocaml' ? checked : ""}>
+            <label for="${ocamlInputId}"><code>ml</code></label>
+            <input type="radio" id="${reasonInputId}" name="syntax" value="reason" ${currentSyntax == 'reason' ? checked : ""}>
+            <label for="${reasonInputId}"><code>re</code></label>
+          </div>
+        `.trim()
+        $toggleSyntaxDiv = $toggleSyntaxDiv.firstChild
+        document.querySelector('body > nav').appendChild($toggleSyntaxDiv);
+  
+        let setCurrentSyntax = (syntax) => {
+          document.body.classList.remove(`${CLASS_PREFIX}${currentSyntax}`)
+          document.body.classList.add(`${CLASS_PREFIX}${syntax}`)
+  
+          currentSyntax = syntax
+          localStorage.setItem('syntax', currentSyntax)
+        }
+  
+        setCurrentSyntax(currentSyntax)
+  
+        const $ocamlInputEl = document.getElementById(ocamlInputId);
+        $ocamlInputEl.addEventListener('click', (el) => {
+          setCurrentSyntax(el.target.value)
+        })
+        const $reasonInputEl = document.getElementById(reasonInputId)
+        $reasonInputEl.addEventListener('click', (el) => {
+          setCurrentSyntax(el.target.value)
+        })
+      })
+  </script>
  </head>
  <body>
   <nav>
@@ -22,26 +63,17 @@
    </h1>
   </header>
   <div class="content">
-   <div class="spec module-substitution lang-ocaml" id="module-L">
+   <div class="spec module-substitution syntax-ocaml" id="module-L">
     <a href="#module-L" class="anchor"></a><code><span class="keyword">module</span> L := <a href="../Z/Y/index.html">Z.Y</a></code>
    </div>
-   <div class="spec type lang-reason" id="type-t">
+   <div class="spec type syntax-ocaml" id="type-t">
     <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t = <a href="../Z/Y/X/index.html#type-t">Z.Y.X.t</a>(int);</code>
    </div>
-   <div class="spec type lang-ocaml" id="type-t">
-    <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t = <span>int <a href="../Z/Y/X/index.html#type-t">Z.Y.X.t</a></span></code>
-   </div>
-   <div class="spec type-subst lang-reason" id="type-u">
+   <div class="spec type-subst syntax-ocaml" id="type-u">
     <a href="#type-u" class="anchor"></a><code><span class="keyword">type</span> u := int;</code>
    </div>
-   <div class="spec type-subst lang-ocaml" id="type-u">
-    <a href="#type-u" class="anchor"></a><code><span class="keyword">type</span> u := int</code>
-   </div>
-   <div class="spec type lang-reason" id="type-v">
+   <div class="spec type syntax-ocaml" id="type-v">
     <a href="#type-v" class="anchor"></a><code><span class="keyword">type</span> v = <a href="../Z/Y/X/index.html#type-t">Z.Y.X.t</a>(<a href="index.html#type-u">u</a>);</code>
-   </div>
-   <div class="spec type lang-ocaml" id="type-v">
-    <a href="#type-v" class="anchor"></a><code><span class="keyword">type</span> v = <span><a href="index.html#type-u">u</a> <a href="../Z/Y/X/index.html#type-t">Z.Y.X.t</a></span></code>
    </div>
   </div>
  </body>
